main and footer added

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,8 @@
     display: flex;  
     justify-content: space-between; 
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 600;   
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0,0.1);
 }   
 .nav-links{  
     display: flex;  
@@ -95,4 +96,159 @@
 
 .social-images{ 
     margin: 200px auto;
+}   
+
+
+/* populer Products section start */
+
+.products-title{    
+    font-size: 28px;
+    font-weight: 600;   
+    text-align: center;
+}     
+
+.products-name{    
+    font-size: 28px;
+    font-weight: 500;
+
+}   
+
+.products-price{    
+    font-size: 24px;
+    font-weight: 400;
+
+}   
+
+.products-des{  
+    font-size: 14px;
+    font-weight: 700;
+}
+.products-details{  
+    padding: 20px;  
+    text-align: left;
+}
+
+.star{  
+    display: flex;  
+    text-align: center;
+}       
+
+.star-photo{    
+    width: 100px; 
+}   
+
+.product-box{    
+    width: 329px;
+    height: 476px;  
+    border-radius: 10px;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0,0.1);
+    background: rgb(255, 255, 255); 
+    padding: 20px;
+      
+}       
+    
+
+.products{      
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);  
+    gap: 60px;  
+    margin: 50px;      
+    padding: 40px 20px 30px 160px;
+
+}
+
+.populer-collection{    
+    justify-content: center;    
+    text-align:  center; 
+    align-items: center;    
+    padding: 20px;  
+    border-radius: 20px;    
+}
+
+        /* future section */
+    .future{     
+        display: flex;   
+        box-shadow: 0px 0px 40px 0px rgba(0, 0, 0,0.1); 
+        border-radius: 20px;     
+        
+    }   
+
+    .future-contant{     
+        text-align: left;   
+        margin-top: 40px;   
+        margin-left: 30px;  
+        padding: 30px;   
+    }   
+
+    .future-title{  
+        font-size: 38px;
+        font-weight: 700;
+    }   
+
+    .future-des{    
+        font-size: 16px;
+        font-weight: 700;
+    }   
+
+    .future-image{  
+      margin: 70px; 
+      width: 700px; 
+
+      
+    }
+
+/* footer section */    
+
+.footer{    
+    text-align: center; 
+    background-color: aqua; 
+    padding: 60px;
+}   
+
+.footer-head{   
+    font-size: 24px;
+    font-weight: 700;   
+    color: black;
+}   
+
+.footer-des{    
+    font-size: 14px;
+    font-weight: 700;
+}   
+
+.footer-head{  
+    padding-bottom: 10px;
+}
+/* Media Query for small device */  
+
+@media  screen and (max-width:576px){
+    .nav-links, .banner{    
+        flex-direction: column;  
+        align-items: center;    
+        margin-bottom: -90px;   
+    }   
+
+    .navbar{    
+        text-align: center; 
+        flex-direction: column; 
+        align-items: center;    
+        margin-left: 60px;
+    }   
+    .brand{ 
+        margin-right: 70px;
+    }   
+    .nav-links{ 
+        margin-left: 70px;
+    }
+    .banner{    
+        text-align: center;
+    }
+    .main-camera{   
+        width: 100%;    
+        margin: 40px;
+    }
+    .image-container {   
+     background-size: cover;
+        margin-top: 90px;
+    }   
 }
