--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,8 @@
 .footer{    
     text-align: center; 
     background-color: aqua; 
-    padding: 60px;
+    padding: 60px;  
+    width: 100%;
 }   
 
 .footer-head{   
@@ -232,17 +233,33 @@
         text-align: center; 
         flex-direction: column; 
         align-items: center;    
-        margin-left: 60px;
+        margin-left: 50px;  
+        box-shadow: none;
     }   
     .brand{ 
-        margin-right: 70px;
+        margin-right: 50px;
     }   
     .nav-links{ 
-        margin-left: 70px;
+        margin-left: 60px;
     }
     .banner{    
-        text-align: center;
+        text-align: center; 
+
+    }   
+
+    .social-images{ 
+        margin-left: 50px;
     }
+    .banner-contant{    
+        margin-left: 10px;
+    }
+
+    .social-links{ 
+        padding: 30px; 
+        margin-left: 0px;   
+        
+    }   
+
     .main-camera{   
         width: 100%;    
         margin: 40px;
@@ -250,5 +267,39 @@
     .image-container {   
      background-size: cover;
         margin-top: 90px;
+    }       
+
+    
+    .products{      
+        flex-direction: column; 
+        grid-template-columns: repeat(1, 1fr);  
+        text-align: left;   
+        margin-left: -140px;   
+    
     }   
-}
+    .products-details{  
+        padding: 10px;  
+        text-align: left;
+        margin-top: 20px;     
+    }   
+        
+    
+    .future{    
+        flex-direction: column; 
+
+
+    }   
+    .future-image{  
+        max-width: 350px;   
+        margin-left: 10px;  
+
+    }   
+    .future-contant{    
+        margin-left: 0px;   
+        padding-top: -40px;
+    }
+}   
+
+/* Media Query for medium device */ 
+
+    @media  screen and (min-width:576px) and (max-width:768px){
