--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
 }   
-/* nav bar */
-.brand{ 
+/* nav bar */   
+.brand{     
     font-size: 24px;
     font-weight: 700;   
     padding: 30px 50px 30px;
@@ -61,16 +61,31 @@
     margin-bottom: 20px;
 
 }   
+/* hover button added */
+.btn-primary{
+    background-image: linear-gradient(to right, #1D976C 0%, #93F9B9  51%, #1D976C  100%);
+    margin-top: 20px;   
+    
+    padding: 10px 24px 10px 24px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;            
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
+  }
 
-.btn-primary{   
-    padding: 10px 24px 10px 24px;   
-    border-radius: 41px;
-    margin-top: 20px;
-    background: rgb(224, 44, 109);
-}
+  .btn-primary:hover {
+    background-position: right center; /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+  }
 
+ /* hover button :end */
 .main-camera{
-    width: 600px;
+    width: 500px;
         
 
 }   
@@ -139,11 +154,16 @@
 
 .product-box{    
     width: 329px;
-    height: 476px;  
+    height: 476px;
     border-radius: 10px;
-    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0,0.1);
-    background: rgb(255, 255, 255); 
-    padding: 20px;
+    padding: 20px;  
+    position: relative;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    cursor: pointer;
+    color: rgb(0, 0, 0);
       
 }       
     
@@ -163,7 +183,54 @@
     align-items: center;    
     padding: 20px;  
     border-radius: 20px;    
-}
+}   
+
+/* products animation added */
+
+
+.product-box::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    left: -5px;
+    margin: auto;
+    width: 340px;
+    height: 490px; 
+    border-radius: 10px;
+    background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100% );
+    z-index: -10;
+    pointer-events: none;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  
+  .product-box::after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100% );
+    transform: translate3d(0, 0, 0) scale(0.95);
+    filter: blur(20px);
+  }
+  
+  
+  .product-box p:not(.products-details) {
+    font-size: 14px;
+  }
+  
+  .product-box p:last-child {
+    color: #e81cff;
+    font-weight: 600;
+  }
+  
+  .product-box:hover::after {
+    filter: blur(30px);
+  }
+  
+  .product-box:hover::before {
+    transform: rotate(-90deg) scaleX(1.34) scaleY(0.77);
+  }
+
 
         /* future section */
     .future{     
@@ -359,12 +426,11 @@
             margin-right: 150px;
         }
         .products{  
-            padding: 0px;
+            display: grid;  
+            grid-template-columns: repeat(3, 1fr); 
+            padding: 0px;   
+            margin-left: -10px;
+    
         }
 
     }   
-
-    /* Media Query for extra large device */  
-    @media  screen and (min-width:1200px){  
-
-    } 
